- Updated "example/rssreader.conf".

2006-02-10: Version 0.1.2

- The RSS item menu doesn't use the fixed font anymore.
- Updated HTML entities conversion table.

2006-04-20: Version 0.2.0

- Updated for vdr-1.3.47.
- Updated "example/rssreader.conf".
- Updated HTML entities conversion table.

2006-04-23: Version 0.3.0

- Added STRIP option for Makefile (Thanks to Ville Skyttä).
- Modified APIVERSION code in Makefile.

2006-04-30: Version 1.0.0

- Updated for vdr-1.4.0.
- Modified APIVERSION code in Makefile.

2006-07-01: Version 1.0.1

- Added French translation (Thanks to Patrice Staudt).
- Updated "example/rssreader.conf".

2007-10-12: Version 1.0.2

- Backported from 1.1.2.

2008-01-20: Version 1.0.3

- Added Italian translation (Thanks to Diego Pierotto).
- Updated "example/rssreader.conf".
- Added '-Wno-parentheses' to the compiler options.

2007-08-14: Version 1.1.0

- Updated for vdr-1.5.7.

2007-08-19: Version 1.1.1

- Updated for vdr-1.5.8.

2007-10-12: Version 1.1.2

- Cleaned up translations.
- Improved html tag stripping.

2008-01-20: Version 1.1.3

- Added Italian translation (Thanks to Diego Pierotto).
- Updated "example/rssreader.conf".
- Added '-Wno-parentheses' to the compiler options.
- Mapped 'kInfo' as help key in setup menu.

2008-02-18: Version 1.1.4

- Replaced asprintf with cString.
- Updated "example/rssreader.conf".

2008-03-27: Version 1.6.0

- Updated for vdr-1.6.0.
- Updated French translation (Thanks to Michaël Nival).
- Updated Italian translation (Thanks to Diego Pierotto).

2008-06-20: Version 1.6.1

- Updated and relocated rssreader.conf to under
  /vdrconf/rssreader directory.
- Updated Italian translation (Thanks to Diego Pierotto).
- Added preliminary support for xineliboutput.

2008-10-12: Version 1.6.2

- Converted HISTORY and fi_FI.po to UTF-8.
- Added an alternate method to navigate with color buttons.
- Fixed detection of video and music file extensions.

2009-xx-xx: Version 1.6.3

- Cleaned up compilation warnings.